chore: added basic product controller slice tests
